# Knowledge_OS

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Agents.md  GETTING_STARTED.md  Improvement.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: test.yml
AI_Engineering/: AGENTS.md  INDEX.md
AI_Engineering/Process_data/: AI-Engineering-Workflow-Matt-Pocock-2026.md  Andrej-Karpathy-Agentic-Engineering-2026.md  Plan-and-Review-Engineering-2026.md  Software-Engineering-Fundamentals-AI-2026.md  Software-Fundamentals-Matter-More-Than-Ever-2026.md
AI_Engineering/Raw_Data/: -QFHIoCo-Ko_Full_Walkthrough_Workflow_for_AI_Coding_—_Matt_Poc.md  96jN2OCOfLs_Andrej_Karpathy_From_Vibe_Coding_to_Agentic_Engine.md  W76woOYHlvY_Software_Engineering_Is_Becoming_Plan_and_Review_—.md  v4F1gFy-hqg_Why_Software_Fundamentals_Matter_More_Than_Ever.md
AI_Leaders/: AGENTS.md  INDEX.md
AI_Leaders/Process_data/: 2026-Cat_Wu-Anthropic_Product_Management.md  (+3 more)
Founders/: AGENTS.md  INDEX.md
Inner_Work/: AGENTS.md  INDEX.md
My_First_Million/: AGENTS.md  INDEX.md
Skills/: AGENTS.md  README.md
Starter_Story/: AGENTS.md  INDEX.md
docs/: ARCHITECTURE.md  Design_Philosophy.md  Self_Heal_Plan.md  Structure_Guide.md  index.md  system-overview.md  testing-guide.md  workflow.md
scripts/: Transcript_Extraction.py
search/: answer_search.py  ask.py  config.py  index.py  requirements.txt  search.py
tests/: __init__.py  conftest.py  test_indexer.py  test_integration.py  test_search.py  test_skills.py  test_transcript.py
(+80 files in other folders)
